--- a/index.html
+++ b/index.html
@@ -35,18 +35,20 @@
     </div>
   </header>
   <main>
-    <div class="container" data-view="games">
+    <div class="container">
       <div class="row">
         <div class="column-full">
-          <h1>Games</h1>
+          <h1 class="gamesHeading">Games</h1>
         </div>
       </div>
       <div class="row">
         <div class="column-full">
-          <ul class="gallery">
+          <ul class="gallery" data-view="games">
 
           </ul>
-          <ul class="ul-games"></ul>
+          <ul class="ul-games" data-view="games">
+
+          </ul>
         </div>
       </div>
     </div>
