--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="nav-top">
           <i class="fa-solid fa-feather-pointed"></i>
           <h2 class="site-name">Gamer'sCodex</h2>
-          <h3><a href="#">Games</a></h3>
+          <h3><a href="#" class="nav-games">Games</a></h3>
           <h3><a href="#">MyCodex</a></h3>
         </div>
         <div class="nav-bottom">
@@ -38,7 +38,7 @@
     <div class="container">
       <div class="row">
         <div class="column-full">
-          <h1 class="gamesHeading">Games</h1>
+          <h1>Games</h1>
         </div>
       </div>
       <div class="row">
