Saved games show up when clicking myCodex link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <i class="fa-solid fa-feather-pointed"></i>
           <h2 class="site-name">Gamer'sCodex</h2>
           <h3><a href="#" class="nav-games">Games</a></h3>
-          <h3><a href="#">MyCodex</a></h3>
+          <h3><a href="#" class="nav-codex">MyCodex</a></h3>
         </div>
         <div class="nav-bottom">
           <i class="fa-solid fa-shuffle"></i>
@@ -71,7 +71,7 @@
       </div>
       <div class="row">
         <div class="column-full">
-          <ul class="gallery">
+          <ul class="my-codex gallery">
 
           </ul>
         </div>
