Added modal and click event to open and close modal

--- a/index.html
+++ b/index.html
@@ -77,6 +77,35 @@
         </div>
       </div>
     </div>
+    <div class="container-modal hidden">
+      <div class="row">
+        <div class="column-full center-page">
+          <div class="rectangle">
+            <div class="modal-heading">
+              <h3 class="modal-text">About <span class="red">Gamer'sCodex</span></h3>
+              <i class="fa-solid fa-xmark"></i>
+            </div>
+            <div class="modal-body">
+              <p>Welcome to <span class="red">Your Gamer Codex</span>, where you can save all
+                of those links and guides to games that are taking up browser space
+                and add personal notes. Below are some tips for using the site.</p>
+              <p class="li-modal"><span class="red">1.</span> Click on <span class="blue">Games</span> to view currently featured games
+                on Steam. Use the <span class="blue">search bar</span> to search for a specific
+                game that you are playing.</p>
+              <p class="li-modal"><span class="red">2.</span> Once you found a game, add it to <span class="blue">MyCodex</span> by
+                clicking on the heart icon next to the game name.</p>
+              <p class="li-modal"><span class="red">3.</span> View your saved games in <span class="blue">MyCodex</span>. In <span
+                  class="blue">MyCodex</span>,
+                you can add and edit notes for your games. Just click on the tile
+                for the game you want to edit.</p>
+              <p class="li-modal"><span class="red">4.</span> Once you have added your notes, click <span class="blue">Submit</span> and
+                you can come back to them again at any time.</p>
+              <p class="li-modal"><span class="red">5.</span> Enjoy <span class="red">Your Codex</span> and a cleaner web browser.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
