Clicking on a game tile will take user to notes page

--- a/index.html
+++ b/index.html
@@ -77,6 +77,47 @@
         </div>
       </div>
     </div>
+    <div class="container notes-container hidden" data-view="notes">
+      <div class="row">
+        <div class="column-full">
+          <h1>My Notes</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column-full">
+          <ul class="my-notes">
+            <li>
+              <img src="" alt="game image">
+              <div class="notes-game-heading">
+                <h3>Rune Factory 5</h3>
+              </div>
+              <div class="notes-body">
+                <div class="rating">
+                  <p>Rating: </p>
+                  <div class="stars">
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                  </div>
+                </div>
+                <div class="status">
+                  <p>Play Status: </p>
+                  <button class="button-playing">Playing</button>
+                </div>
+                <div class="notes">
+                  <p>Notes: </p>
+                </div>
+                <div class="links">
+                  <p>Links: </p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div class="container-modal hidden">
       <div class="row">
         <div class="column-full center-page">
