Added more css for the notes page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   </div>
                   <div class="column-four-sevenths">
                     <div class="notes-game-heading">
-                      <h3>Rune Factory 5</h3>
+                      <h3 class="notes-title">Rune Factory 5</h3>
                       <i class="fa-solid fa-pen-to-square"></i>
                     </div>
                     <div class="notes-body">
@@ -110,7 +110,7 @@
                       </div>
                       <div class="status">
                         <p>Play Status: </p>
-                        <button class="button-playing">Playing</button>
+                        <button class="button-status">Playing</button>
                       </div>
                       <div class="notes">
                         <p>Notes: </p>
