Added the ability to add and delete lines of links when editing notes

--- a/index.html
+++ b/index.html
@@ -189,10 +189,8 @@
                             <i class="fa-solid fa-circle-plus blue"></i>
                           </div>
                         </div>
-                        <form class="links-line">
-                          <input type="text" name="link-description" class="link-description" placeholder="Link Description">
-                          <input type="text" name="link-url" class="link-url" placeholder="Link URL">
-                          <i class="fa-solid fa-trash"></i>
+                        <form class="links-form">
+
                         </form>
                       </div>
                     </div>
