Fixed bug, notes info is now saved correctly to each game editted

--- a/index.html
+++ b/index.html
@@ -111,13 +111,17 @@
                       </div>
                       <div class="status">
                         <p>Play Status: </p>
-                        <button class="button-status">Playing</button>
+                        <button class="button-status playing">Playing</button>
                       </div>
                       <div class="notes">
                         <p>Notes: </p>
+                        <p class="p-notes"></p>
                       </div>
                       <div class="links">
                         <p>Links: </p>
+                        <ul class="links-list">
+
+                        </ul>
                       </div>
                     </div>
                   </div>
