Added modal for deleting saved entry and event listen to the modal buttons

--- a/index.html
+++ b/index.html
@@ -236,6 +236,22 @@
         </div>
       </div>
     </div>
+    <div class="delete-modal hidden">
+      <div class="row">
+        <div class="column-full center-page">
+          <div class="rectangle-small">
+            <div class="delete-text">
+              <h3>Are you sure you want to unheart?</h3>
+              <p>This will delete all data in the entry.</p>
+            </div>
+            <div class="delete-buttons">
+              <button class="delete-cancel">CANCEL</button>
+              <button class="delete-confirm">CONFIRM</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
