Added html and some css for screen when MyCodex is empty; added javascript to make it show when the codex is empty and hide when the codex data length is greater than zero

--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
           <ul class="my-codex gallery">
 
           </ul>
+          <ul class="empty-codex hidden">
+            <li class="empty-card">
+              <h3 class="empty-title">Let's get started!</h3>
+              <p>Welcome to <span class="red">Your Gamer Codex</span>, where you can save
+              all of those links and guides to games that are taking up browser
+              space and add personal notes.</p>
+              <p>To get started, click on <span class="blue">Games</span> to view currently
+              featured games on Steam. Or use the <span class="blue">search bar</span> to search
+              for a specific game that you are playing. You can also click on <span class="blue">Add a Game +</span> to add one manually.</p>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
