Added html form for adding a new game to MyCodex

--- a/index.html
+++ b/index.html
@@ -227,6 +227,43 @@
         </div>
       </div>
     </div>
+    <div class="container addGame-container hidden" data-view="addGame">
+      <div class="row">
+        <div class="column-full">
+          <h1>Add a Game</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column-full">
+          <ul>
+            <li>
+              <div class="notes-card">
+                <div class="row">
+                  <div class="column-three-sevenths placeholder-container">
+                    <img src="images/Placeholder_view_vector.svg (1).png" alt="your image goes here" class="placeholder">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="column-four-sevenths">
+                    <form>
+                      <div class="add-title">
+                        <label for="new-name">Title:</label>
+                        <input type="text" name="new-name" id="new-name" placeholder="Game Name">
+                      </div>
+                      <div class="add-img">
+                        <label for="new-img">Image URL:</label>
+                        <input type="url" name="new-img" id="new-img" placeholder="paste URL here">
+                      </div>
+                      <button type="submit">Submit</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div class="container-modal hidden">
       <div class="row">
         <div class="column-full center-page">
