Completed CSS for add a game page

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="column-full">
           <ul>
             <li>
-              <div class="notes-card">
+              <div class="notes-card add-game-card">
                 <div class="row">
                   <div class="column-three-sevenths placeholder-container">
                     <img src="images/Placeholder_view_vector.svg (1).png" alt="your image goes here" class="placeholder">
@@ -245,16 +245,18 @@
                 </div>
                 <div class="row">
                   <div class="column-four-sevenths">
-                    <form>
+                    <form class="add-game-form">
                       <div class="add-title">
                         <label for="new-name">Title:</label>
                         <input type="text" name="new-name" id="new-name" placeholder="Game Name">
                       </div>
                       <div class="add-img">
                         <label for="new-img">Image URL:</label>
-                        <input type="url" name="new-img" id="new-img" placeholder="paste URL here">
+                        <input type="url" name="new-img" id="new-img" placeholder="Paste an image URL here">
                       </div>
-                      <button type="submit">Submit</button>
+                      <div class="new-submit-div">
+                        <button type="submit" class="new-submit">Submit</button>
+                      </div>
                     </form>
                   </div>
                 </div>
