Adding a new game adds its data to local storage and creates a tile that can be edited in MyCodex

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="row">
         <div class="column-full codex-heading">
           <h1>MyCodex</h1>
-          <form class="codex-buttons">
+          <div class="codex-buttons">
             <button class="add-button">Add+</button>
             <select name="order" class="order-button">
               <option value="order-playing">Order...</option>
@@ -76,7 +76,7 @@
               <option value="order-eventually">Eventually</option>
               <option value="order-finished">Finished</option>
             </select>
-          </form>
+          </div>
         </div>
       </div>
       <div class="row">
