Fixed CSS to make new images the correct width and height on MyCodex page and notes page

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <li>
               <div class="notes-card">
                 <div class="row">
-                  <div class="column-three-sevenths">
+                  <div class="column-three-sevenths placeholder-container">
                     <img src="" alt="game image" class="notes-img">
                   </div>
                   <div class="column-four-sevenths">
@@ -240,7 +240,7 @@
               <div class="notes-card add-game-card">
                 <div class="row">
                   <div class="column-three-sevenths placeholder-container">
-                    <img src="images/Placeholder_view_vector.svg (1).png" alt="your image goes here" class="placeholder">
+                    <img src="images/Placeholder_view_vector.svg .png" alt="your image goes here" class="placeholder">
                   </div>
                 </div>
                 <div class="row">
