Fixed margins on image in notes and edit on desktop

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <li>
               <div class="notes-card">
                 <div class="row">
-                  <div class="column-three-sevenths placeholder-container">
+                  <div class="column-three-sevenths notes-img-cont">
                     <img src="" alt="game image" class="notes-img">
                   </div>
                   <div class="column-four-sevenths">
@@ -164,7 +164,7 @@
             <li>
               <div class="notes-card">
                 <div class="row">
-                  <div class="column-three-sevenths">
+                  <div class="column-three-sevenths edit-img-cont">
                     <img src="" alt="game image" class="notes-img edit-img">
                   </div>
                   <div class="column-four-sevenths">
@@ -172,7 +172,7 @@
                       <h3 class="notes-title edit-title">Title</h3>
                     </div>
                     <form class="edit-form">
-                      <div class="notes-body">
+                      <div class="notes-body edit-body">
                         <div class="rating rating-edit">
                           <p>Rating: </p>
                           <div class="stars stars-edit">
