--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container featured-container" data-view="featured">
       <div class="row">
         <div class="column-full">
-          <h1>Games</h1>
+          <h1>Featured</h1>
         </div>
       </div>
       <div class="row">
@@ -59,6 +59,20 @@
       <div class="row">
         <div class="column-full">
           <ul class="ul-games">
+
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="container random-container hidden" data-view="random">
+      <div class="row">
+        <div class="column-full">
+          <h1>Random Event</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column-full">
+          <ul class="ul-games-random">
 
           </ul>
         </div>
