Added event listerner on select to show and hide games in MyCodex based on play status

--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@
           <div class="codex-buttons">
             <button class="add-button">Add+</button>
             <select name="order" class="order-button">
-              <option value="order-playing">Order...</option>
+              <option value="order-filter">Filter...</option>
               <option value="order-playing">Playing</option>
               <option value="order-eventually">Eventually</option>
               <option value="order-finished">Finished</option>
+              <option value="order-all">Show All</option>
             </select>
           </div>
         </div>
