--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
 
                         </ul>
                       </div>
+                      <div class="back-to-codex">
+                        <button class="back">Back to MyCodex</button>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -230,6 +233,7 @@
                         </div>
                       </div>
                       <div class="form-submit-button">
+                        <button class="cancel">Cancel</button>
                         <button type="submit" class="button-submit">Submit</button>
                       </div>
                     </form>
