--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
           <h1>Featured</h1>
         </div>
       </div>
+      <div class="spinner">
+        <div class="lds-roller">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
       <div class="row">
         <div class="column-full">
           <ul class="gallery">
@@ -54,6 +66,18 @@
       <div class="row">
         <div class="column-full">
           <h1>Games</h1>
+        </div>
+      </div>
+      <div class="spinner s-g">
+        <div class="lds-roller">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
       </div>
       <div class="row">
