--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h1>Games</h1>
         </div>
       </div>
-      <div class="spinner s-g">
+      <div class="spinner">
         <div class="lds-roller">
           <div></div>
           <div></div>
@@ -92,6 +92,18 @@
       <div class="row">
         <div class="column-full">
           <h1>Random Event</h1>
+        </div>
+      </div>
+      <div class="spinner">
+        <div class="lds-roller">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
       </div>
       <div class="row">
