Added div card to display when a search result returns empty

--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
           <div></div>
         </div>
       </div>
+      <div class="row no-results-div hidden">
+        <div class="column-full">
+          <ul>
+            <li>
+              <div class="card no-results">
+                <i class="fa-regular fa-face-frown"></i>
+                <p class="no-result-text">No results for searched game found.<br> Please try searching again.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
       <div class="row">
         <div class="column-full">
           <ul class="ul-games">
