--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
           <div></div>
         </div>
       </div>
+      <div class="row error-div hidden">
+        <div class="column-full">
+          <ul>
+            <li>
+              <div class="card no-results">
+                <i class="fa-regular fa-face-dizzy"></i>
+                <p class="error-text">Sorry, there was an error conntecting to the network.<br> Please check your internet connection and try again.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
       <div class="row">
         <div class="column-full">
           <ul class="gallery">
@@ -78,6 +90,19 @@
           <div></div>
           <div></div>
           <div></div>
+        </div>
+      </div>
+      <div class="row error-div hidden">
+        <div class="column-full">
+          <ul>
+            <li>
+              <div class="card no-results">
+                <i class="fa-regular fa-face-dizzy"></i>
+                <p class="error-text">Sorry, there was an error conntecting to the network.<br> Please check your internet
+                  connection and try again.</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
       <div class="row no-results-div hidden">
