Added Open Graph meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Gamer's Codex">
+  <meta property="og:description" content="An application for gamers who want to save and organize user entered notes and links for games.">
+  <meta property="og:image" content="https://arieldonner.github.io/gamers-codex/images/gamers-codex-image.jpg">
+  <meta property="og:url" content="https://arieldonner.github.io/gamers-codex/">
   <title>Gamer's Codex</title>
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
